# svgtypes

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: Cargo.toml
src/: angle.rs  aspect_ratio.rs  color.rs  directional_position.rs  enable_background.rs  error.rs  filter_functions.rs  font.rs  funciri.rs  length.rs  lib.rs  light_dark.rs  number.rs  paint.rs  paint_order.rs  path.rs  stream.rs  transform.rs  transform_origin.rs  variable.rs  viewbox.rs
