[package]
name = "svgtypes"
version = "0.15.2"
authors = ["Yevhenii Reizner <razrfalcon@gmail.com>"]
categories = ["parser-implementations"]
description = "SVG types parser."
documentation = "https://docs.rs/svgtypes/"
keywords = ["svg", "parser", "tokenizer"]
license = "Apache-2.0 OR MIT"
edition = "2018"
readme = "README.md"
repository = "https://github.com/RazrFalcon/svgtypes"
exclude = ["benches/", "codegen/", "fuzz/"]

[workspace]
members = ["benches"]

[features]
default = ["std"]
std = ["kurbo/std"]
libm = ["kurbo/libm"]

[dependencies]
siphasher = "1.0" # perfect hash implementation for color names
kurbo = { version = "0.11", default-features = false } # ArcTo to CurveTo(s)
